@@ -456,6 +456,10 @@ Release 0.20.0 - Unreleased
     HADOOP-4821. Usage description in the Quotas guide documentations are
     incorrect. (Boris Shkolnik via hairong)
 
+    HADOOP-4879. Fix org.apache.hadoop.mapred.Counters to correctly define
+    Object.equals rather than depend on contentEquals api. (omalley via 
+    acmurthy)
+
 Release 0.19.1 - Unreleased
 
   IMPROVEMENTS
